--- a/imgv/imgv.csproj
+++ b/imgv/imgv.csproj
@@ -8,4 +8,8 @@
     <UseWindowsForms>False</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
